[gd_scene load_steps=8 format=3 uid="uid://pfd5m2d4k8tl"]

[ext_resource type="PackedScene" uid="uid://w7b4biodiorb" path="res://Murderer/murderer.aseprite" id="1_fhv73"]
[ext_resource type="Script" uid="uid://bjocg360pd51f" path="res://Murderer/Muderer.gd" id="1_urcot"]
[ext_resource type="Texture2D" uid="uid://oabi2lphuv6d" path="res://Items/knife.aseprite" id="2_urcot"]
[ext_resource type="Script" uid="uid://bv72jx3ftu5w3" path="res://Props/Interactable.gd" id="3_kle12"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fhv73"]
radius = 24.63

[sub_resource type="Gradient" id="Gradient_jbxtt"]
interpolation_mode = 1
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7vlad"]
gradient = SubResource("Gradient_jbxtt")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="Muderer" type="Node2D"]
script = ExtResource("1_urcot")
metadata/_custom_type_script = "uid://ctjcoj4ssevwg"

[node name="murderer" parent="." instance=ExtResource("1_fhv73")]
unique_name_in_owner = true
position = Vector2(0, -33.5)
animation = &"Love"
autoplay = "RESET"

[node name="Face" type="Area2D" parent="murderer"]
unique_name_in_owner = true
position = Vector2(0, 33.5)
collision_mask = 2147483648
script = ExtResource("3_kle12")

[node name="CollisionShape2D" type="CollisionShape2D" parent="murderer/Face"]
shape = SubResource("CircleShape2D_fhv73")

[node name="Knife" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-53, -20.5)
texture = ExtResource("2_urcot")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -17)
texture = SubResource("GradientTexture2D_7vlad")

[connection signal="area_entered" from="murderer/Face" to="." method="_on_face_area_entered"]
[connection signal="clicked" from="murderer/Face" to="." method="_on_face_clicked"]
[connection signal="held" from="murderer/Face" to="." method="_on_face_held"]
[connection signal="released" from="murderer/Face" to="." method="_on_face_released"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
